--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,19 +4,19 @@ services:
     container_name: full_app
     build: .
     ports:
-      - "8080:8080" # Forward the exposed port 8080 on the container to port 8080 on the host machine
+      - 8080:8080
     restart: on-failure
     volumes:
       - api:/usr/src/app/
     depends_on:
-      - postgres # This service depends on postgres. Start that first.
-      # - mysql # This service depends on mysql. Start that first.
+      - fullstack-postgres
     networks:
       - fullstack
 
-  postgres:
+
+  fullstack-postgres:
     image: postgres:latest
-    container_name: full_db
+    container_name: full_db_postgres
     environment:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
@@ -42,20 +42,6 @@ services:
     networks:
       - fullstack
     restart: unless-stopped
-  # mysql:
-  #   image: mysql:5.7
-  #   ports:
-  #     - 3306:3306
-  #   environment:
-  #     - MYSQL_DATABASE=${DB_NAME}
-  #     - MYSQL_USER=${DB_USER}
-  #     - MYSQL_PASSWORD=${DB_PASSWORD}
-  #     - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
-  #     - DATABASE_HOST=${DB_HOST}
-  #   volumes:
-  #     - database_mysql:/var/lib/postgresql/data
-  #   networks:
-  #     - fullstack
 
 volumes:
   api:
@@ -64,4 +50,4 @@ volumes:
 # Networks to be created to facilitate communication between containers
 networks:
   fullstack:
-
+    driver: bridge
