--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    container_name: full_app
+    container_name: codetoanbug_app
     build: .
     ports:
       - 8080:8080
@@ -15,8 +15,8 @@ services:
 
 
   fullstack-postgres:
-    image: postgres:latest
-    container_name: full_db_postgres
+    image: postgres:12.9-alpine
+    container_name: codetoanbug_db_postgres
     environment:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
